# comp345_demo

./: CMakeLists.txt  main.cpp
Builder/: Builder.h  CharacterBuilder.h  EditorMapElementBuilder.cpp  EditorMapElementBuilder.h  GameMapElementBuilder.cpp  GameMapElementBuilder.h  PlayerBuilder.cpp  PlayerBuilder.h
Character/: Backpack.cpp  Backpack.h  Character.h  CharacterAttribute.cpp  CharacterAttribute.h  CharacterEquipment.cpp  CharacterEquipment.h  Fighter.cpp  Fighter.h
Dice/: Dice.cpp  Dice.h
Driver/: CharacterDriver.cpp  CharacterDriver.h  CombatDriver.cpp  CombatDriver.h  MapElementDriver.cpp  MapElementDriver.h
Item/: Armor.cpp  Armor.h  Belt.cpp  Belt.h  Boots.cpp  Boots.h  Helmet.cpp  Helmet.h  Item.h  ItemContainer.h  Ring.cpp  Ring.h  Shield.cpp  Shield.h  Weapon.cpp  Weapon.h
MapElement/: Chest.cpp  Chest.h  Door.cpp  Door.h  Monster.cpp  Monster.h
SaveManager/: SaveManager.cpp  SaveManager.h
SaveManager/SavedFiles/: SavedEditorMap.xml
